Fix main scrollbar

--- a/themes/basakbeykoz/react-src/src/common/_vars.scss
+++ b/themes/basakbeykoz/react-src/src/common/_vars.scss
@@ -109,6 +109,7 @@ $colorMap: (
     bg-green: var(--brush-lightGreen),
     bg-black: var(--brush-black),
     ui-white: var(--brush-white),
+    ui-gray: var(--brush-gray),
     ui-yellow: var(--brush-darkYellow),
     ui-decoration: var(--brush-darkYellow),
     ui-beige: var(--brush-lightYellow),
